# stimator

./: .coveragerc  .gitignore  AGEDOLib.lib  DE.py  DESolver.py  DEThread.py  DeODE.py  LICENSE  MANIFEST.in  README  README.rst  __init__.py  analysis.py  aui_stimator.py  deode.py  dictdotlookup.py  dyncriteria.py  fim.py  gen_portable.bat  hatch.toml  images.py  model.py  model2.py  modelparser.py  pyproject.toml  pytest.ini  resultsframe.py  run_wxgui.py  setup.cfg  setup.py  start_stimator.bat  stimator.py  stimator_drivergen.py  stimator_gui.py  stimator_timecourse.py  stimatorwidgts.py  timecourse.py
agedo/: Operadores.h  ParametersLimits.h  Resultset.h  Resultsetold.h  agedomake.bat
depot/: GDE3solver_withFIMdivs.py  deode_output_new.txt  tcdif_withFIMdivs.py  time_dom.py
doc/: .gitignore  Makefile  api.rst  cleanup_tutorial_rst.py  conf.py  generate_tutorial_rst.py  index.rst  installing.rst  introduction.rst  make.bat  tutorial.rst
docs/: .gitignore  Makefile  _config.yml  _toc.yml  api.rst  basic_features.md  index.md  introduction.rst  make.bat  models.md  par_estimation.md  solving.md
examples/: 1_solving.py  2_par_estimation.py  3_par_estimation_glos.py  5_dxdt.py  6_dyn_sens.py  7_glyoxalase_discrim_2m.py  Model_objects.ipynb  TSH2a.txt  TSH2b.txt  branched.mdl  demo_deode.py  demo_dxdt.py  demo_dynsens.py  demo_model.py  demo_par_scanning_ex3.py  ex2data.txt  glxs_hta.mdl  glxs_hta_unix.mdl  glyoxalase_discrim_2m.py  par_estimation.ipynb  par_estimation_ex2.py  par_estimation_glos.py  plotgenerations.py  profile_par_scanning.py  rossler.mdl  (+5 more)
(+257 files in other folders)
